--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -15,7 +15,7 @@
     <label for="collapsible-toggle-{{key}}" class="section-label">{{key}}</label>
     <input id="collapsible-toggle-{{key}}" type="checkbox" class="collapsible-toggle" hidden{{#if (eq ../page/appName key)}} checked{{/if}} />
 
-    <form id="{{key}}" method="post" class="collapsible">
+    <form id="{{key}}" method="post" class="collapsible" action="/config?instance={{key}}">
         <div class="row">
             {{#each val}}
             <div class="col-12 col-md-6 col-xl-4">
@@ -27,7 +27,7 @@
             {{/each}}
         </div>
 
-        <input type="hidden" name="password" value="{{data/password}}" />
+        <input type="hidden" name="password" value="{{@root/data/password}}" />
 
         <div class="form-controls text-center mt-4">
             <button class="btn btn-primary">Save</button>
