added ability to bulk-update instances (closes #188)

--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -31,6 +31,7 @@
 
         <div class="form-controls text-center mt-4">
             <button class="btn btn-primary">Save</button>
+            <button class="btn" formaction="/config?instance={{key}}&bulk=all">Save to all</button>
         </div>
     </form>
 </section>
