added onebox styles close to used in chat (closes #187)

--- a/src/server/static/css/app.scss
+++ b/src/server/static/css/app.scss
@@ -6,6 +6,7 @@
 @import "components/_general";
 @import "components/_header";
 @import "components/_labels";
+@import "components/_onebox";
 @import "components/_tables";
 @import "components/_forms";
 
