--- a/src/server/views/partials/breadcrumbs.handlebars
+++ b/src/server/views/partials/breadcrumbs.handlebars
@@ -1,5 +1,5 @@
 <nav>
-  <span class="navitem">{{{url "/" "Home"}}}</span>
+  <span class="navitem">{{{url "/" label="Home"}}}</span>
   &nbsp;>&nbsp;
   <span class="navitem">{{current}}</span>
 </nav>
