--- a/src/server/views/partials/nominees.handlebars
+++ b/src/server/views/partials/nominees.handlebars
@@ -19,7 +19,7 @@
           <a href="{{this.permalink}}">{{{this.userName}}}</a>
         </td>
         <td>
-          {{{url (getter this "nominationLink") "nomination"}}}
+          {{{url (getter this "nominationLink") label="nomination"}}}
         </td>
         <td>
           {{this.userScore}}
