breadcrumbs should preserve password in the query string

--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -2,7 +2,7 @@
 
 <h1 class="fs-4">{{{heading}}}</h1>
 
-{{> breadcrumbs current=current }}
+{{> breadcrumbs current=current password=data/password }}
 
 {{#ifTruthy data/statusText}}
 <div class="mt-4">
