--- a/src/server/views/feedback.handlebars
+++ b/src/server/views/feedback.handlebars
@@ -2,4 +2,6 @@
 
 <h1 class="fs-4">{{{heading}}}</h1>
 
+{{> breadcrumbs current=current password=data/password }}
+
 <iframe class="fullscreen" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTpjKscoRvkfEDy8n6lMellXldyLLyQYkhGAIT23GNtjJP2DbFqmFLzCU6MSYFTPac3RyGfJKXKYKZc/pubhtml?gid=2089732743&rm=embedded&chrome=false"></iframe>
