--- a/src/server/views/health.handlebars
+++ b/src/server/views/health.handlebars
@@ -1,5 +1,7 @@
 {{> navigation routes=data/routes password=data/password path=data/path instances=data/instances }}
 
+{{> breadcrumbs current=current password=data/password }}
+
 <main class="dashboard">
     <section>
         <h2 class="fs-4">Clients</h2>
