--- a/src/server/views/commands.handlebars
+++ b/src/server/views/commands.handlebars
@@ -1,6 +1,6 @@
 {{> navigation routes=data/routes password=data/password path=data/path instances=data/instances }}
 
-{{> breadcrumbs current=current }}
+{{> breadcrumbs current=current password=data/password }}
 
 {{#ifTruthy data/statusText}}
 <div class="mt-4">
