--- a/src/server/views/server.handlebars
+++ b/src/server/views/server.handlebars
@@ -2,7 +2,7 @@
 
 <h1 class="fs-4">{{{heading}}}</h1>
 
-{{> breadcrumbs current=current }}
+{{> breadcrumbs current=current password=data/password }}
 
 <main class="dashboard row">
     <section class="col-auto">
