--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -168,6 +168,10 @@
             <tr><td>throttleSecs</td><td>{{throttleSecs}} secs</td></tr>
             <tr><td>scrapeIntervalMins</td><td>{{scrapeIntervalMins}} mins</td></tr>
             <tr><td>electionAfterpartyMins</td><td>{{electionAfterpartyMins}} mins</td></tr>
+            <tr>
+                <td>autoscaleHeroku</td>
+                <td>{{{boolean (getter this "autoscaleHeroku")}}}</td>
+            </tr>
             <tr><td>duplicateResponseText</td><td>{{duplicateResponseText}}</td></tr>
             <tr><td>maxMessageLength</td><td>{{maxMessageLength}}</td></tr>
             <tr><td>maxMessageParts</td><td>{{maxMessageParts}}</td></tr>
