Validate chatId and chatUserId

--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -10,6 +10,10 @@
 </div>
 {{/ifTruthy}}
 
+<div class="alert alert-secondary mt-4">
+    The max value of variables ending in <code>_MINS</code> is <code>35791</code>
+</div>
+
 {{#iterate data/env}}
 <section class="collapsible-container">
     <label for="collapsible-toggle-{{key}}" class="section-label">{{key}}</label>
