CSS for help icon

--- a/src/server/static/css/app.scss
+++ b/src/server/static/css/app.scss
@@ -5,10 +5,11 @@
 @import "components/_collapsible";
 @import "components/_general";
 @import "components/_header";
-@import "components/_labels";
+@import "components/_label";
 @import "components/_onebox";
-@import "components/_tables";
-@import "components/_forms";
+@import "components/_table";
+@import "components/_form";
+@import "components/_icon";
 
 // Main stylesheet
 @import "styles";
