--- a/src/server/static/css/styles.scss
+++ b/src/server/static/css/styles.scss
@@ -1,3 +1,12 @@
+a {
+  border-radius: 3px;
+
+  &:focus-visible {
+    outline: 2px solid #000;
+    outline-offset: 3px;
+  }
+}
+
 .dashboard {
   display: flex;
   flex-direction: row;
