--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -154,7 +154,7 @@
     {{#with botconfig}}
     <section class="col-auto">
 
-        <h2 class="fs-4">Bot Config <sup><a href="https://github.com/samliew/se-electionbot/blob/master/README.md#environment-variables" title="View documentation"><i class="icon-help"></i></a></sup></h2>
+        <h2 class="fs-4">Bot Config <sup><a class="icon-help" href="https://github.com/samliew/se-electionbot/blob/master/README.md#environment-variables" title="View documentation"></a></sup></h2>
         <table>
             <tr><td>scriptHostname</td><td>{{{url scriptHostname}}}</td></tr>
             <tr><td>scriptInitDate</td><td>{{> relativetime date=scriptInitDate}}</td></tr>
